third_party/move/move-compiler-v2/tests/checking/typing/declare_wrong_arity.exp

Diagnostics:
error: tuple type `()` is not allowed as a local variable type
  ┌─ tests/checking/typing/declare_wrong_arity.move:5:13
  │
5 │         let x: ();
  │             ^
  │
  = required by declaration of local `x`

error: cannot adapt `()` to annotated type `u64`
  ┌─ tests/checking/typing/declare_wrong_arity.move:6:13
  │
6 │         let (): u64;
  │             ^^

error: expected 3 items but found 4
  ┌─ tests/checking/typing/declare_wrong_arity.move:7:13
  │
7 │         let (x, b, R{f}): (u64, bool, R, R);
  │             ^^^^^^^^^^^^

error: expected 3 items but found 2
  ┌─ tests/checking/typing/declare_wrong_arity.move:8:13
  │
8 │         let (x, b, R{f}): (u64, bool);
  │             ^^^^^^^^^^^^
